tests/e2e/function_without_return_returns_value2.error
Error: syntax error in story at line 5, column 20

5|                return 0
                         ^

E0110: `return` expected. Did you miss to add `returns int`?
